# Vive_Ultimate_tracker_Wifi_Solution

./: README.md  Usage Guide.md
app/: UTK-WiFiOnly-App.ps1  flash_wifi.cmd  (+7 more)
steamvr_driver/: CMakeLists.txt  build_driver.ps1  driver.vrdrivermanifest  register_driver.ps1
steamvr_driver/build_verify/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  driver_utk_wifi_tracker.vcxproj  driver_utk_wifi_tracker.vcxproj.filters  utk_wifi_tracker.sln
steamvr_driver/build_verify/driver_utk_wifi_tracker.dir/Release/: driver_utk_wifi_tracker.dll.recipe
steamvr_driver/build_verify/driver_utk_wifi_tracker.dir/Release/driver_u.06C91F79.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
steamvr_driver/build_verify/utk_wifi_tracker/lib/Release/: driver_utk_wifi_tracker.exp  driver_utk_wifi_tracker.lib
steamvr_driver/build_verify/utk_wifi_tracker/resources/: driver.vrresources
steamvr_driver/build_verify/utk_wifi_tracker/resources/input/tracker/: utk_wifi_tracker_waist_profile.json
steamvr_driver/build_verify/utk_wifi_tracker/resources/rendermodels/vive_ultimate_tracker/: _Vive_Ultimate_Tracker.mtl
steamvr_driver/build_verify/utk_wifi_tracker/resources/settings/: default.vrsettings
steamvr_driver/build_verify/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
steamvr_driver/build_verify/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
steamvr_driver/build_verify/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
steamvr_driver/resources/input/: utk_wifi_tracker_profile.json
steamvr_driver/resources/rendermodels/vive_ultimate_tracker/: Vive_Ultimate_Tracker.mtl  vive_ultimate_tracker.json
steamvr_driver/resources/rendermodels/vr_tracker_vive_3_0/: vr_tracker_vive_3_0.json  vr_tracker_vive_3_0.mtl
steamvr_driver/src/: device_provider.cpp  device_provider.h  driverlog.cpp  hmd_driver_factory.cpp  tracker_device_driver.cpp  tracker_device_driver.h  udp_pose_receiver.cpp  udp_pose_receiver.h
(+11 files in other folders)
